--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>se.iths</finalName>
+        <finalName>studeman</finalName>
     </build>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
